# raga

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  compose_raga.py
src/: __main__.py  core.py  health.py  utils.py
src/raga/: __init__.py  cli.py  models.py  report.py
src/raga/composer/: __init__.py  harmonizer.py  melody.py  rhythm.py
src/raga/music/: __init__.py  notation.py  ragas.py  swaras.py  talas.py
tests/: test_benchmark.py  test_composer.py  test_core.py  test_integration.py  test_ragas.py
