[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "raga"
version = "0.1.0"
description = "AI Indian Music Composer"
authors = [{ name = "Mukunda Katta" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
raga = "raga.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
